<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context=".layout_dialog"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:cardCornerRadius="18dp"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/ic_close_" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@fonts/iran_sans"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:text="@string/list_question"
                android:textColor="#585858"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="left"
                android:layoutDirection="rtl"
                android:hint="@string/select"
                app:hintTextColor="#949494"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="none"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textColor="#585858"
                android:fontFamily="@fonts/iran_sans"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:elevation="4sp"
                android:fontFamily="@fonts/iran_sans"
                android:gravity="start"
                android:hint="@string/edittext_hint"
                android:outlineSpotShadowColor="@color/bordericon"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="140dp"
                android:textColor="#585858"
                android:textColorHint="#949494" />

            <Button
                android:id="@+id/send_btn"
                android:layout_width="184dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:background="@drawable/blue_btn"
                android:fontFamily="@fonts/iran_sans"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>